# ruslan-desktop

./: .env.example  .gitignore  PLAN.md  README.md  build.spec  generate_sprites.py  pyproject.toml  run.sh  setup.py
.github/workflows/: ci.yml
actions/: __init__.py  base.py  engine.py  file_ops.py  keyboard_ops.py  mouse_ops.py  system_ops.py  utility_ops.py  web_ops.py  window_ops.py
api/: main.py
assets/: app_icon.icns
brain/: gateway.py  schemas.py
character/: README.md
character/godot_project/: README.md  main.gd  main.tscn  project.godot
config/: settings.json
core/: config.py  event_bus.py  logger.py  main.py  platform.py  task_queue.py
macos/: __init__.py  controller.py
memory/: store.py
phases/: 00-context.md  01-goal.md  02-plan.md  04-review.md
plugins/: manager.py
plugins/__example__/: manifest.json  plugin.py
plugins/browser/: manifest.json  plugin.py
plugins/telegram/: manifest.json  plugin.py
scripts/: build_dmg.sh  com.valldun1.ruslan-desktop.plist  generate_icon.py
tests/: test_actions.py  test_api.py  test_brain.py  test_core.py  test_neon_character.py  test_plugins.py  test_ui.py  test_voice.py
ui/: __init__.py  chat_dialog.py  drag_drop.py  hotkey.py  neon_character.py  overlay.py  sprite_widget.py
voice/: engine.py  manager.py  stt.py  wake_word.py
windows/: controller.py
