[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruslan"
version = "0.2.0"
description = "Ruslan Desktop Agent — визуальный AI-агент для macOS/Windows"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Valentin", email = "kap@ruslan.team"},
]

dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0,<3",
    "loguru>=0.7,<1",
    "anyio>=4,<5",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "pre-commit>=3,<4",
]
macos = [
    "pyautogui>=0.9,<1",
    "pygetwindow>=0.0.9,<1",
    # System TTS — встроенный say, без зависимостей
    # Global hotkey — pynput для macOS CGEventTap
    "pynput>=1.7,<2",
]
windows = [
    "pywin32>=306,<308",
    "pyautogui>=0.9,<1",
    "keyboard>=0.13,<1",
    "mouse>=0.7,<1",
    "psutil>=5.9,<6",
    "watchdog>=4,<5",
    "pygetwindow>=0.0.9,<1",
    "pynput>=1.7,<2",
]
ui = [
    "PyQt5>=5.15,<6",
    "pynput>=1.7,<2",
]
voice = [
    "faster-whisper>=1.0,<2",
    # TTS — системный (say/SAPI). Опционально edge-tts для кастомных голосов
    "edge-tts>=6,<7",
]
plugins = [
    "telethon>=1.34,<2",
    "playwright>=1.40,<2",
]
all = [
    "ruslan[dev,macos,ui,voice,plugins]",
]

[tool.setuptools.packages.find]
include = ["core", "actions", "api", "brain", "macos", "memory", "voice", "ui", "windows", "plugins"]

[project.scripts]
ruslan = "core.main:main"
